samples/_failures_safe/1761353314_bd31a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dbd7f46d.c: In function ‘main’:
./samples/SAFE/__tmp_dbd7f46d.c:123:5: error: expected expression at end of input
  123 |     if (scanf("%d %d", &
      |     ^~
./samples/SAFE/__tmp_dbd7f46d.c:123:5: error: expected declaration or statement at end of input
